# AIA

1/handout/: CMakeLists.txt
1/handout/src/: given.cpp  given.hpp  main.cpp  yours.cpp  yours.hpp
1/handout/test/: tests.cpp
2/handout/: CMakeLists.txt
2/handout/src/: app.cpp  given.cpp  given.hpp  main.cpp  yours.cpp  yours.hpp
2/handout/test/: tests.cpp
3/handout/: CMakeLists.txt
3/handout/src/: app.cpp  given.cpp  given.hpp  main.cpp  yours.cpp  yours.hpp
3/handout/test/: tests.cpp
